# RitualGrimoire-Stellar-Shield

./: MANIFEST.in  README.md  serve.py  setup.cfg
RitualGrimoire_Stellar_Shield.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: TOC.md  conf.py  index.rst  reference.rst
protocols/: stellar-shield.yml
web_ui/: app.js  index.html  launch_ui.py  mappings.json  shape-pools.json  viewer.css
web_ui/shared/: mapping.js  sensors.js
