[metadata]
name = RitualGrimoire-Stellar_Shield
version = 1.0
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CraftingBuilds/RitualGrimoire-Stellar-Shield
author = CraftingBuilds/astroenergies
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = ritualgrimoire_stellar_shield
setup_requires =
    wheel
[options.entry_points]
console_scripts =
    ritualgrimoire-stellar-shield=ritualgrimoire_stellar_shield:main
[build_ext]
inplace = 1
